--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
    <script src="rock.js" defer></script>
 </head>
 <body>
-   
+    <h1>Rock Paper Scissors</h1>
+    <button id="rock-button">Rock</button>
+    <button id="paper-button">Paper</button>
+    <button id ="scissors-button">Scissors</button>
+    <p id = "result">RESULT</p>
+    <div id = "player-score">Player Score: 0</div>
+    <div id = "computer-score">Computer Score: 0</div>
+    <button id = "reset">Reset</button>
 </body>
 </html>
